--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.example.team8capstone.glasstestapplication"
+        applicationId "com.example.team8capstone.glassfoley"
         minSdkVersion 19
         targetSdkVersion 21
         versionCode 1
